--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -11,7 +11,7 @@
   /* display: flex; */
 }
 
-.card{
+.card {
   /* border: 2px rgb(0, 4, 255) solid; */
   display: flex;
   text-align: center;
@@ -21,13 +21,20 @@
   padding: 20px;
   width: 320px;
   color: #141414;
-  transition: 0,2s;
+  transition: 0, 2s;
   margin-right: auto;
   margin-left: auto;
   justify-content: space-around;
+
+
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
-.card:hover{
+.card:hover {
   border: 1px solid gray;
   border-left: 8px solid gray;
 }
