--- a/client/src/container/Login.css
+++ b/client/src/container/Login.css
@@ -4,7 +4,8 @@
   /* margin-bottom: 20px; */
   box-shadow: 5px 5px 25px black;
   width: 50%;
-  margin-top: 80px;
+  margin-top: 66px;
+  margin-bottom: 66px;
   margin-right: auto;
   margin-left: auto;
   border-radius: 20px;
