--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -2,29 +2,31 @@
   /* border: 2px red solid; */
   margin-bottom: 20px;
   box-shadow: 5px 5px 25px black;
-  width: 60%;
+  width: 40%;
   margin-top: 40px;
   margin-right: auto;
   margin-left: auto;
   border-radius: 20px;
   padding: 20px;
-  /* display: flex; */
+  display:block;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
   /* border: 2px rgb(0, 4, 255) solid; */
-  display: flex;
+  display:flex;
   text-align: center;
   border: 1px solid gray;
+  width: 80%;
   border-radius: 5px;
-  margin: 40px 20px;
+  margin: auto;
+  margin-bottom: 10px;
   padding: 20px;
-  width: 320px;
+
   color: #141414;
   transition: 0, 2s;
-  margin-right: auto;
-  margin-left: auto;
-  justify-content: space-around;
+  /* justify-content:space-around; */
 
 
   font-size: 30px;
