--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -1,16 +1,21 @@
+* {
+  margin: 0;
+  font-family: sans-serif;
+}
 .cards {
   /* border: 2px red solid; */
-  margin-bottom: 20px;
-  box-shadow: 5px 5px 25px black;
-  width: 40%;
-  margin-top: 40px;
+  margin-top: 60px;
+  margin-bottom: 80px;
+  /* box-shadow: 5px 5px 25px black; */
+  width: 70%;
   margin-right: auto;
   margin-left: auto;
   border-radius: 20px;
   padding: 20px;
-  display:block;
+  display:flex;
   justify-content: center;
   align-items: center;
+  /* background-color: transparent; */
 }
 
 .card {
@@ -22,10 +27,10 @@
   border-radius: 5px;
   margin: auto;
   margin-bottom: 10px;
-  padding: 20px;
-
+  padding: 10px 20px;
   color: #141414;
   transition: 0, 2s;
+  background-color: transparent;
   /* justify-content:space-around; */
 
 
@@ -39,4 +44,5 @@
 .card:hover {
   border: 1px solid gray;
   border-left: 8px solid gray;
+  background-color: transparent;
 }
