--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,13 +1,15 @@
-.myfooter footer {
-  background-color: #1b1b1b;
+.footer {
+  background-color: #131A22;
   /* border: 2px red solid; */
-
-  padding: 20px 0;
+  border-radius: 40px 40px 0px 0px;
+  padding: 15px 0;
   text-align: center;
   font-size: 18px;
-
-}
-
-.myfooter .mohammed {
-  background-color: #1976d2;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
