--- a/client/src/container/Login.css
+++ b/client/src/container/Login.css
@@ -2,17 +2,18 @@
 .inputs-login {
   /* border: 2px red solid; */
   /* margin-bottom: 20px; */
-  box-shadow: 5px 5px 25px black;
-  width: 50%;
-  margin-top: 66px;
+  /* box-shadow: 5px 5px 25px black; */
+  width: 30%;
+  margin-top: 30px;
   margin-bottom: 66px;
   margin-right: auto;
   margin-left: auto;
   border-radius: 20px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top:70px;
+  padding-bottom: 10px;
   display: block;
   text-align: center;
+  background-color:transparent;
 }
 
 .textfield{
@@ -24,11 +25,37 @@
 
     width: 78px;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 20px;
   
     display: block;
     justify-content: center;
     align-items: center;
   
     text-align: center;
+}
+
+.message{
+  /* border: 2px rgb(55, 0, 255) solid; */
+  font-size: 15px;
+  margin: auto;
+  margin-top: 20px;
+  padding: 15px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  text-align: center;
+  /* background-color: rgb(182, 181, 181); */
+  border-radius: 16px;
+}
+
+.loginbackground{
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position:fixed;
+  background-position: center;
+  background-image: url(../images/loginbackground.avif);
+  background-size: cover;
 }
