--- a/client/src/container/Registration.css
+++ b/client/src/container/Registration.css
@@ -2,6 +2,7 @@
   /* border: 2px red solid; */
   color: #1b1b1b;
   height: calc(100vh - 128.64px);
+  /* margin-top: 100px; */
 
   font-size: 30px;
   font-weight: bold;
@@ -14,6 +15,7 @@
   text-align: center;
   margin-top: 60px;
 }
+
 
 #outlined-basic {
   /* border: 2px red solid; */
@@ -58,6 +60,17 @@
   align-items: center;
   width: 50%;
   text-align: center;
-  background-color: rgb(182, 181, 181);
+  /* background-color: rgb(182, 181, 181); */
   border-radius: 10px;
+}
+
+.registrationbackground{
+  top: 0;
+  /* bottom: 0; */
+  left: 0;
+  right: 0;
+  position:fixed;
+  background-position: center;
+  background-image: url(../images/registrationbackground.avif);
+  background-size:cover;
 }
