--- a/client/src/container/Login.css
+++ b/client/src/container/Login.css
@@ -59,3 +59,16 @@
   background-image: url(../images/loginbackground.avif);
   background-size: cover;
 }
+
+.login-title{
+  color: #1b1b1b;
+  text-shadow: 5px 5px 20px black;
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
