--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -7,7 +7,7 @@
   margin-top: 60px;
   margin-bottom: 80px;
   /* box-shadow: 5px 5px 25px black; */
-  width: 70%;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
   border-radius: 20px;
@@ -19,13 +19,14 @@
 }
 
 .card {
-  /* border: 2px rgb(0, 4, 255) solid; */
+  /* border: 2px rgb(255, 0, 0) solid; */
   display:flex;
   text-align: center;
   border: 1px solid gray;
-  width: 80%;
+  /* width: 80%; */
   border-radius: 5px;
   margin: auto;
+  margin-left: 20px;
   margin-bottom: 10px;
   padding: 10px 20px;
   color: #141414;
