--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #131A22;
+  background-color: #1b1b1b;
   /* border: 2px red solid; */
   border-radius: 40px 40px 0px 0px;
   padding: 15px 0;
@@ -13,3 +13,8 @@
   left: 0;
   right: 0;
 }
+
+.icons{
+  margin-right: 12px;
+}
+
