--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,7 +1,80 @@
-Header{
+.hide-when-mobile {
+  display: flex;
+  justify-content: space-around;
+}
+
+
+/* ==================
+    3. header of mobile
+===================== */
+.show-when-mobile {
+  display: none;
+}
+
+/* Added from mobile-screen.css */
+
+@media (max-width: 800px) {
+  .show-when-mobile {
+    display: block;
+  }
+
+  .hide-when-mobile {
+    display: none;
+  }
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: sans-serif;
+  text-decoration: none;
+  list-style: none;
+  letter-spacing: 1px;
+  padding: 8px 15px;
+}
+
+.navlink:hover{
+  color: orange;
+  box-shadow: 0 0 5px orange;
+  border-radius: 5px;}
+
+html {
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+ul li{
+  list-style-type: none;
+}
+
+header {
+  background-color: #1b1b1b;
+}
+
+h1 {
+  padding: 20px;
+  font-size: 25px;
+}
+
+/* Header{
   margin-bottom: 80px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-}
+} */
