--- a/client/src/container/Registration.css
+++ b/client/src/container/Registration.css
@@ -69,8 +69,21 @@
   /* bottom: 0; */
   left: 0;
   right: 0;
-  position:fixed;
+  /* position:fixed; */
   background-position: center;
   background-image: url(../images/registrationbackground.avif);
   background-size:cover;
+}
+
+.registration-title{
+  color: #1b1b1b;
+  text-shadow: 5px 5px 20px black;
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
