--- a/client/src/container/Login.css
+++ b/client/src/container/Login.css
@@ -4,7 +4,7 @@
   /* margin-bottom: 20px; */
   /* box-shadow: 5px 5px 25px black; */
   width: 30%;
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 66px;
   margin-right: auto;
   margin-left: auto;
@@ -61,9 +61,10 @@
 }
 
 .login-title{
+  /* border: 2px rgb(55, 0, 255) solid; */
   color: #1b1b1b;
-  text-shadow: 5px 5px 20px black;
-  margin-bottom: 10px;
+  text-shadow: 5px 5px 20px rgb(114, 114, 114);
+  margin-top: 100px;
   font-size: 30px;
   font-weight: bold;
   line-height: 30px;
